--- a/src/app/task-presenter/task-presenter.component.scss
+++ b/src/app/task-presenter/task-presenter.component.scss
@@ -1,6 +1,6 @@
 .row {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: baseline;
 }
