--- a/src/app/task-presenter/task-presenter.component.html
+++ b/src/app/task-presenter/task-presenter.component.html
@@ -1,5 +1,5 @@
 <mat-card class="row">
-  <p>{{ task.name }}</p>
+  <div class="input-name">{{ task.name }}</div>
   <p>{{ task.timer | async | minuteSeconds }}</p>
   <button mat-fab (click)="click()">
     <mat-icon>{{ task.buttonText }}</mat-icon>
